// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`work-package walk snapshots (baseline) > [default] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "default",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "analyze-repo-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "problem_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "analyse-challenge-pass",
        "update-artifact",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "build-artifact-check",
          "option": "none-needed",
          "setVariable": {
            "build_dependent_artifacts_pending": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [elicitation-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "elicitation-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "analyze-repo-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "elicitation-only",
          "setVariable": {
            "needs_elicitation": true,
            "needs_research": false,
            "problem_complexity": "moderate",
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "analyse-challenge-pass",
        "update-artifact",
      ],
      "unresolved": [],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "03-requirements-elicitation.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": {
            "has_stakeholder_input": true,
          },
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "ask-question",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "build-artifact-check",
          "option": "none-needed",
          "setVariable": {
            "build_dependent_artifacts_pending": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [full-workflow] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "full-workflow",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "analyze-repo-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "full-workflow",
          "setVariable": {
            "needs_elicitation": true,
            "needs_research": true,
            "problem_complexity": "complex",
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "analyse-challenge-pass",
        "update-artifact",
      ],
      "unresolved": [],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "03-requirements-elicitation.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": {
            "has_stakeholder_input": true,
          },
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "ask-question",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "04-kb-research.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "research-knowledge-base",
        "synthesize",
        "triage-research-candidates",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "derive-context-scope",
        "announce-derived-context-scope",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "dispatch-prism",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "build-artifact-check",
          "option": "none-needed",
          "setVariable": {
            "build_dependent_artifacts_pending": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [research-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "research-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "analyze-repo-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "research-only",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": true,
            "problem_complexity": "moderate",
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "analyse-challenge-pass",
        "update-artifact",
      ],
      "unresolved": [],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "04-kb-research.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "research-knowledge-base",
        "synthesize",
        "triage-research-candidates",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "derive-context-scope",
        "announce-derived-context-scope",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "build-artifact-check",
          "option": "none-needed",
          "setVariable": {
            "build_dependent_artifacts_pending": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [review-mode] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "review-mode",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
        "01-README.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "announce-derived-review-mode",
        "ingest-prior-feedback",
        "seed-review-mode-outcomes",
        "derive-host-repo",
        "resolve-repo-root",
        "analyze-repo-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "compute-canonical-target-path",
        "create-review-worktree",
        "check-branch",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
        "assess-ticket-completeness",
        "set-review-mode-path",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "analyse-challenge-pass",
        "update-artifact",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-baseline-state",
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "document-failures",
        "assess-test-coverage",
        "triage-reported-failures",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "document-cleanup-recommendations",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "review-summary-approval",
          "option": "post-approve",
          "setVariable": {
            "review_posted": true,
            "review_type": "approve",
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "consolidate-review-findings",
        "resolve-artifact-publish",
        "commit-review-artifacts",
        "generate-review-summary",
        "present-summary-to-user",
        "persist-review-summary",
        "post-pr-review",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-complete-doc",
        "render-token-usage",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "resolve-close-out-publish",
        "publish-close-out-artifacts",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [skip-optional] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "skip-optional",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
        "README.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
        "01-README.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "derive-host-repo",
        "resolve-repo-root",
        "analyze-repo-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "announce-project-type",
        "check-issue",
        "derive-issue-type",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "problem_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "analyse-challenge-loop",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "bind-comprehension-dir",
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "update-artifact-initial",
        "revise-initial-questions",
        "analyse-challenge-pass",
        "update-artifact",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "analyse-challenge-loop",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "analyse-challenge-loop",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "analyse-challenge-loop",
        "present-resolved-assumptions",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "code-review-method.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "test-suite-review-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-code-review-method.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
        {
          "id": "local-validation-permission",
          "option": "run-suite",
          "setVariable": {
            "run_local_validation": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
        "test-suite-review-method.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
        "10-test-suite-review-method.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "strategic-review-{n}-method.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "12-strategic-review-n-method.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "refresh-pr-body",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": {
            "attestation_option": "certify",
          },
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "build-artifact-check",
          "option": "none-needed",
          "setVariable": {
            "build_dependent_artifacts_pending": false,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "merge-strategy-guidance",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
        "session-trace.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
        "14-session-trace.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "read-session",
        "conduct-retrospective",
        "announce-retrospective",
        "verify-artifact-links",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;
